# Multilingual-Health-Query-Retrieval-System

./: .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  dataAll.parquet  main.py  pyproject.toml  requirements.txt  test.py  train.py
.github/workflows/: ci.yml
Scraping/: 1mg_Scraping.py  data_pre_processing.ipynb  helper.py
app/api/: dependencies.py  main.py
app/core/: config.py  logging.py
app/scripts/: migrate_data.py
app/services/: data_service.py  vector_engine.py
app/static/: style.css
app/templates/: index.html  results.html
templates/: index.html
tests/: test_api.py
