[project]
name = "mediquery-pro"
version = "2.0.0"
description = "Advanced Multilingual Health Query Retrieval System using BERT"
authors = [
    { name = "Abhishek S", email = "abhisheks@example.com" }
]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.6",
    "sentence-transformers>=2.2.2",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.0",
    "jinja2>=3.1.2",
    "tqdm>=4.65.0",
    "pyarrow>=12.0.0", # For Parquet support
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "httpx>=0.24.1",
    "ruff>=0.1.0",
    "pre-commit>=3.3.3",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "C90", "UP"]
ignore = ["E501", "N802", "N803", "N806", "E722"]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
